[gd_scene load_steps=3 format=3 uid="uid://cuvl2i3huswqf"]

[ext_resource type="Script" path="res://addons/bilive_observer/bilive_observer.gd" id="1_gmrmo"]
[ext_resource type="Script" path="res://main.gd" id="1_q7ja4"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7ja4")

[node name="BiliveObserver" type="Node" parent="."]
script = ExtResource("1_gmrmo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Popularity" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
text = "在线人数："

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Message" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true

[connection signal="danmu_received" from="BiliveObserver" to="." method="_on_bilive_observer_danmu_received"]
[connection signal="popularity_received" from="BiliveObserver" to="." method="_on_bilive_observer_popularity_received"]
[connection signal="user_face_requested" from="BiliveObserver" to="." method="_on_bilive_observer_user_face_requested"]
[connection signal="user_info_requested" from="BiliveObserver" to="." method="_on_bilive_observer_user_info_requested"]
